--- a/src/main/ListTitlePane/ListTitlePane.fxml
+++ b/src/main/ListTitlePane/ListTitlePane.fxml
@@ -18,8 +18,9 @@
    <graphic>
       <Pane prefHeight="58.0" prefWidth="536.0">
          <children>
-            <Label fx:id="dateLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="77.0" text="25e Maj 2020" />
-            <Button fx:id="saveButton" layoutX="200.0" layoutY="17.0" mnemonicParsing="false" onMouseClicked="#onSaveButtonPressed" text="Lägg till som iköpslista" />
+            <Label fx:id="nameLabel" layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="64.0" text="nameLabel" />
+            <Button layoutX="316.0" layoutY="2.0" mnemonicParsing="false" text="Lägg till i kundvagn" />
+            <Button layoutX="309.0" layoutY="32.0" mnemonicParsing="false" text="Ta bort som iköpslista" />
          </children>
       </Pane>
    </graphic>
