--- a/src/main/Payment/Payment.fxml
+++ b/src/main/Payment/Payment.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <fx:root fx:id="paymentMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -36,31 +37,43 @@
                                        <children>
                                           <Pane layoutX="52.0" layoutY="34.0" prefHeight="349.0" prefWidth="678.0" style="-fx-background-color: white;">
                                              <children>
-                                                <Pane layoutX="82.0" layoutY="31.0" prefHeight="200.0" prefWidth="515.0" style="-fx-background-color: #F5F5F5;">
+                                                <Pane layoutX="82.0" layoutY="31.0" prefHeight="215.0" prefWidth="515.0" style="-fx-background-color: #F5F5F5;">
                                                    <children>
-                                                      <Label layoutX="32.0" layoutY="14.0" text=" Kredit- eller debitkort" />
-                                                      <TextField layoutX="32.0" layoutY="41.0" prefHeight="39.0" prefWidth="421.0" />
-                                                      <Label layoutX="91.0" layoutY="52.0" prefHeight="17.0" prefWidth="75.0" text="Kortnummer" />
-                                                      <ImageView fitHeight="44.0" fitWidth="70.0" layoutX="40.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <TextField layoutX="32.0" layoutY="80.0" prefHeight="39.0" prefWidth="261.0" />
-                                                      <Label layoutX="92.0" layoutY="91.0" prefHeight="17.0" prefWidth="73.0" text="Giltighetstid" />
-                                                      <ImageView fitHeight="34.0" fitWidth="45.0" layoutX="45.0" layoutY="83.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <TextField layoutX="293.0" layoutY="80.0" prefHeight="39.0" />
-                                                      <ImageView fitHeight="28.0" fitWidth="28.0" layoutX="303.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <Label layoutX="331.0" layoutY="92.0" text="CVC/ CVV" />
-                                                      <ImageView fitHeight="42.0" fitWidth="49.0" layoutX="32.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <ImageView fitHeight="42.0" fitWidth="49.0" layoutX="79.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <ImageView fitHeight="42.0" fitWidth="49.0" layoutX="128.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <CheckBox layoutX="44.0" layoutY="156.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="245.0" text="Spara mina kortuppgifter till nästa köp" />
+                                                      <Label layoutX="32.0" layoutY="5.0" text=" Kredit- eller debitkort">
+                                                         <font>
+                                                            <Font size="17.0" />
+                                                         </font></Label>
+                                                      <TextField fx:id="cardNumberTextField" layoutX="30.0" layoutY="35.0" prefHeight="39.0" prefWidth="422.0" promptText="          Kortnummer" />
+                                                      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="37.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="37.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <TextField fx:id="cvcTextField" layoutX="241.0" layoutY="74.0" prefHeight="39.0" prefWidth="211.0" promptText="          CVC/ CVV" />
+                                                      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="250.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="32.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="90.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="149.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
+                                                      <CheckBox fx:id="ceckButtonPayment" layoutX="30.0" layoutY="180.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="329.0" text="Spara mina kortuppgifter till nästa köp">
+                                                         <font>
+                                                            <Font size="17.0" />
+                                                         </font></CheckBox>
+                                                      <Label fx:id="cardErrorLabel" layoutX="30.0" layoutY="155.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Inget fält få vara tomt!" textFill="RED" />
+                                                      <Label fx:id="cardStyleErrorLabel" layoutX="30.0" layoutY="155.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Fälten få bara innehållla tal!!" textFill="RED" />
+                                                      <Label fx:id="cardAmountErrorLabel" layoutX="30.0" layoutY="155.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Gå igenom antal siffror vid fälten!" textFill="RED" />
+                                                      <TextField fx:id="yearTextField" layoutX="141.0" layoutY="74.0" prefHeight="39.0" prefWidth="100.0" promptText="          ÅR" />
+                                                      <TextField fx:id="monthTextField" layoutX="30.0" layoutY="74.0" prefHeight="39.0" prefWidth="100.0" promptText="          MM" />
+                                                      <Label layoutX="125.0" layoutY="79.0" prefHeight="28.0" prefWidth="17.0" text="  /">
+                                                         <font>
+                                                            <Font size="18.0" />
+                                                         </font>
+                                                      </Label>
                                                    </children>
                                                 </Pane>
-                                                <Pane layoutX="248.0" layoutY="239.0" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #F5F5F5;">
+                                                <Pane layoutX="253.0" layoutY="254.0" prefHeight="47.0" prefWidth="159.0" style="-fx-background-color: #F5F5F5;">
                                                    <children>
                                                       <Label layoutX="14.0" layoutY="15.0" text="Totaltbelopp:" />
                                                       <Label layoutX="140.0" layoutY="15.0" text="kr" />
                                                    </children>
                                                 </Pane>
-                                                <Button fx:id="payButton" layoutX="220.0" layoutY="297.0" mnemonicParsing="false" onMouseClicked="#onPayButtonPressed" prefHeight="27.0" prefWidth="226.0" style="-fx-background-color: #FF5E5E;" text="Slutför köpet">
+                                                <Button fx:id="payButton" layoutX="220.0" layoutY="310.0" mnemonicParsing="false" onMouseClicked="#onPayButtonPressed" prefHeight="27.0" prefWidth="226.0" style="-fx-background-color: #FF5E5E;" text="Slutför köpet">
                                                    <opaqueInsets>
                                                       <Insets />
                                                    </opaqueInsets>
@@ -82,7 +95,10 @@
                         </Pane>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="370.0" layoutY="13.0" text="Delsida" />
+                              <Label fx:id="pageNameLabel" layoutX="323.0" layoutY="7.0" text="Kortuppgifter">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font></Label>
                            </children>
                         </Pane>
                      </children>
