--- a/src/main/Timetable/Timetable.fxml
+++ b/src/main/Timetable/Timetable.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
 <fx:root fx:id="timetableMainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="960.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -27,7 +29,10 @@
                      <children>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
                            <children>
-                              <Label fx:id="pageNameLabel" layoutX="370.0" layoutY="13.0" text="Delsida" />
+                              <Label fx:id="pageNameLabel" layoutX="269.0" layoutY="-5.0" text="Välj leveranstid">
+                                 <font>
+                                    <Font size="36.0" />
+                                 </font></Label>
                            </children>
                         </Pane>
                         <Pane layoutX="31.0" layoutY="529.0" prefHeight="52.0" prefWidth="763.0" style="-fx-background-color: white;">
@@ -44,14 +49,26 @@
                                     <Label layoutX="13.0" layoutY="168.0" text="10.00-12.00" />
                                     <Label layoutX="13.0" layoutY="251.0" text="12.00-14.00" />
                                     <Label layoutX="13.0" layoutY="340.0" text="14.00-16.00" />
-                                    <Label fx:id="date1Label" alignment="CENTER" layoutX="96.0" layoutY="24.0" text="date 1" />
-                                    <Label fx:id="date2Label" layoutX="196.0" layoutY="24.0" text="date 2" />
-                                    <Label fx:id="date3Label" layoutX="296.0" layoutY="24.0" text="date 3" />
-                                    <Label fx:id="date4Label" layoutX="396.0" layoutY="24.0" text="date 4" />
-                                    <Label fx:id="date5Label" layoutX="496.0" layoutY="24.0" text="date 5" />
-                                    <Label fx:id="date6Label" layoutX="596.0" layoutY="24.0" text="date 6" />
-                                    <Label fx:id="date7Label" layoutX="696.0" layoutY="24.0" text="date 7" />
+                                    <Label fx:id="date1Label" alignment="CENTER" layoutX="113.0" layoutY="24.0" text="date 1" />
+                                    <Label fx:id="date2Label" layoutX="213.0" layoutY="24.0" text="date 2" />
+                                    <Label fx:id="date3Label" layoutX="313.0" layoutY="24.0" text="date 3" />
+                                    <Label fx:id="date4Label" layoutX="413.0" layoutY="24.0" text="date 4" />
+                                    <Label fx:id="date5Label" layoutX="513.0" layoutY="24.0" text="date 5" />
+                                    <Label fx:id="date6Label" layoutX="613.0" layoutY="24.0" text="date 6" />
+                                    <Label fx:id="date7Label" layoutX="713.0" layoutY="24.0" text="date 7" />
                                     <FlowPane fx:id="timeTableFlowPane" layoutX="88.0" layoutY="52.0" prefHeight="335.0" prefWidth="676.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="276.2" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="375.6" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="475.8" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="575.8" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="676.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="775.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="-100.0" endY="383.0" layoutX="181.0" layoutY="33.0" startX="-100.0" startY="-33.0" />
+                                    <Line endX="680.0" layoutX="101.0" layoutY="133.0" startX="-100.0" />
+                                    <Line endX="680.0" layoutX="101.0" layoutY="219.0" startX="-100.0" />
+                                    <Line endX="680.0" layoutX="101.0" layoutY="305.0" startX="-100.0" />
+                                    <Line endX="680.0" layoutX="101.0" layoutY="52.0" startX="-100.0" />
+                                    <Line endX="680.0" layoutX="101.0" layoutY="385.0" startX="-100.0" />
                                  </children>
                               </Pane>
                            </children>
