--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -247,7 +247,11 @@
                                           </AnchorPane>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                              <children>
-                                                <FlowPane fx:id="productFlowPane" layoutX="53.0" layoutY="60.0" prefHeight="461.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                                <ScrollPane prefHeight="481.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                   <content>
+                                                      <FlowPane fx:id="productFlowPane" prefHeight="481.0" prefWidth="567.0" />
+                                                   </content>
+                                                </ScrollPane>
                                              </children>
                                           </AnchorPane>
                                       </items>
