--- a/src/main/DetailedView/DetailedView.fxml
+++ b/src/main/DetailedView/DetailedView.fxml
@@ -3,29 +3,30 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="820.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="820.0" style="-fx-background-color: #F5FFFF;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="productImage" fitHeight="200.0" fitWidth="220.0" layoutX="14.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="35.0" />
-      <Label fx:id="productNameLabel" layoutX="301.0" layoutY="17.0" prefHeight="53.0" prefWidth="219.0" text="Varunamn" AnchorPane.topAnchor="17.0">
+      <Label fx:id="productNameLabel" layoutX="301.0" layoutY="17.0" prefHeight="70.0" prefWidth="447.0" text="Varunamn" AnchorPane.topAnchor="17.0">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Label fx:id="productCategoryLabel" layoutX="301.0" layoutY="79.0" text="Kategori">
+      <Label fx:id="productCategoryLabel" layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="395.0" text="Kategori">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="priceLabel" layoutX="335.0" layoutY="102.0" text="X:-">
+      <Label fx:id="priceLabel" layoutX="335.0" layoutY="102.0" prefHeight="53.0" prefWidth="192.0" text="X:-">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="quantityLabel" layoutX="367.0" layoutY="164.0" text="X">
+      <Label fx:id="quantityLabel" layoutX="362.0" layoutY="164.0" text="1">
          <font>
             <Font size="18.0" />
          </font>
@@ -44,10 +45,15 @@
          </font>
       </TextArea>
       <Button fx:id="exitButton" layoutX="761.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#closeDetailedView" prefHeight="45.0" prefWidth="45.0" text="Exit" />
-      <Label fx:id="quantityLabel1" layoutX="389.0" layoutY="164.0" text="st">
+      <Label fx:id="unitSuffixLabel" layoutX="384.0" layoutY="164.0" text="st">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
+      <ImageView fx:id="organicImage" fitHeight="50.0" fitWidth="50.0" layoutX="202.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Res/Images/eko.jpg" />
+         </image>
+      </ImageView>
    </children>
 </fx:root>
