--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -247,9 +248,12 @@
                                           </AnchorPane>
                                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                              <children>
-                                                <ScrollPane prefHeight="481.0" prefWidth="567.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                                <ScrollPane fx:id="productsScrollPane" prefHeight="481.0" prefWidth="551.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                    <content>
-                                                      <FlowPane fx:id="productFlowPane" prefHeight="481.0" prefWidth="567.0" />
+                                                      <FlowPane fx:id="productFlowPane" alignment="CENTER_LEFT" prefHeight="145.0" prefWidth="599.0" prefWrapLength="1000.0" rowValignment="TOP">
+                                                         <rotationAxis>
+                                                            <Point3D />
+                                                         </rotationAxis></FlowPane>
                                                    </content>
                                                 </ScrollPane>
                                              </children>
