--- a/src/main/Payment/Payment.fxml
+++ b/src/main/Payment/Payment.fxml
@@ -51,7 +51,7 @@
                                                       <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="32.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
                                                       <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="90.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
                                                       <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="149.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <CheckBox layoutX="30.0" layoutY="180.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="329.0" text="Spara mina kortuppgifter till nästa köp">
+                                                      <CheckBox fx:id="checkButtonPayment" layoutX="30.0" layoutY="180.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="329.0" text="Spara mina kortuppgifter till nästa köp">
                                                          <font>
                                                             <Font size="17.0" />
                                                          </font></CheckBox>
