--- a/src/main/ShoppingCartItem/ShoppingCartItem.fxml
+++ b/src/main/ShoppingCartItem/ShoppingCartItem.fxml
@@ -1,18 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="95.0" prefWidth="225.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root fx:id="shuoppingCardItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="74.0" prefWidth="183.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="itemLabel" layoutX="76.0" layoutY="12.0" prefHeight="30.0" prefWidth="52.0" text="Paprika" />
-      <ImageView fx:id="itemImage" fitHeight="70.0" fitWidth="71.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" />
-      <Button fx:id="minusButton" layoutX="77.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
-      <Button fx:id="plusButton" layoutX="129.0" layoutY="55.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
-      <Button fx:id="removeLabel" layoutX="186.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
-      <Label fx:id="priceLabel" layoutX="176.0" layoutY="55.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
-      <Label fx:id="amountLabel" layoutX="112.0" layoutY="55.0" prefHeight="25.0" prefWidth="25.0" text="0" />
+      <Label fx:id="productNameLabel" layoutX="65.0" layoutY="2.0" prefHeight="25.0" prefWidth="52.0" text="Paprika" />
+      <ImageView fx:id="itemImage" fitHeight="60.0" fitWidth="60.0" layoutX="3.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Res/Images/chick.png" />
+         </image></ImageView>
+      <Label fx:id="priceLabel" alignment="CENTER" layoutX="77.0" layoutY="53.0" prefHeight="25.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
+      <Label fx:id="amountLabel" alignment="CENTER" layoutX="88.0" layoutY="29.0" prefHeight="25.0" prefWidth="25.0" text="0" />
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="65.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Res/Images/minus.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="109.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Res/Images/plus.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="144.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Res/Images/paperbin.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="137.0" layoutY="10.0" text="Ta bort" />
    </children>
 </fx:root>
