--- a/src/main/ShoppingCart/ShoppingCart.fxml
+++ b/src/main/ShoppingCart/ShoppingCart.fxml
@@ -30,23 +30,23 @@
                            <children>
                               <StackPane layoutY="1.0" prefHeight="416.0" prefWidth="781.0" style="-fx-background-color: white;">
                                  <children>
-                                    <ScrollPane prefHeight="200.0" prefWidth="200.0">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="416.0" prefWidth="781.0">
-                                             <children>
-                                                <Label layoutX="113.0" layoutY="14.0" text="Label" />
-                                                <Label layoutX="253.0" layoutY="14.0" text="Label" />
-                                                <Label layoutX="409.0" layoutY="14.0" text="Label" />
-                                                <Label layoutX="560.0" layoutY="14.0" text="Label" />
-                                                <FlowPane layoutX="-1.0" layoutY="31.0" prefHeight="328.0" prefWidth="769.0" styleClass="border" stylesheets="@../Res/styles.css" />
-                                                <Label layoutX="51.0" layoutY="372.0" text="Label" />
-                                                <Button fx:id="saveButton" layoutX="453.0" layoutY="361.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="96.0" text="Button" />
-                                                <Label fx:id="sumPriceLabel" layoutX="682.0" layoutY="369.0" text="Label" />
-                                                <ImageView fx:id="saveTooltip" fitHeight="31.0" fitWidth="37.0" layoutX="552.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true" />
-                                             </children>
-                                          </AnchorPane>
-                                       </content>
-                                    </ScrollPane>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="416.0" prefWidth="781.0">
+                                       <children>
+                                          <ScrollPane layoutY="40.0" prefHeight="320.0" prefWidth="783.0">
+                                             <content>
+                                                <FlowPane fx:id="shoppingCartFlowPane" prefHeight="319.0" prefWidth="767.0" stylesheets="@../Res/styles.css" />
+                                             </content>
+                                          </ScrollPane>
+                                          <Label layoutX="113.0" layoutY="14.0" text="Label" />
+                                          <Label layoutX="253.0" layoutY="14.0" text="Label" />
+                                          <Label layoutX="409.0" layoutY="14.0" text="Label" />
+                                          <Label layoutX="560.0" layoutY="14.0" text="Label" />
+                                          <Label layoutX="51.0" layoutY="372.0" text="Label" />
+                                          <Button fx:id="saveButton" layoutX="453.0" layoutY="361.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="96.0" text="Button" />
+                                          <Label fx:id="sumPriceLabel" layoutX="682.0" layoutY="369.0" text="Label" />
+                                          <ImageView fx:id="saveTooltip" fitHeight="31.0" fitWidth="37.0" layoutX="552.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true" />
+                                       </children>
+                                    </AnchorPane>
                                  </children>
                               </StackPane>
                            </children>
