--- a/src/main/WideShoppingCartItem/WideShoppingCartItem.fxml
+++ b/src/main/WideShoppingCartItem/WideShoppingCartItem.fxml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="750.0" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="750.0" style="-fx-background-color: pink;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="itemLabel" layoutX="143.0" layoutY="37.0" prefHeight="30.0" prefWidth="52.0" text="Paprika" />
+      <Label fx:id="itemLabel" layoutX="127.0" layoutY="14.0" prefHeight="30.0" prefWidth="118.0" text="Paprika" />
       <ImageView fx:id="itemImage" fitHeight="90.0" fitWidth="90.0" layoutX="8.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/chick.png" />
          </image></ImageView>
-      <Button fx:id="removeLabel" layoutX="698.0" layoutY="36.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="25.0" text="Button" />
       <Label fx:id="totalPriceLabel" layoutX="563.0" layoutY="37.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
-      <Label fx:id="amountLabel" layoutX="437.0" layoutY="39.0" prefHeight="25.0" prefWidth="25.0" text="0" />
-      <Label fx:id="unitPriceLabel" layoutX="258.0" layoutY="37.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
-      <Label layoutX="697.0" layoutY="14.0" text="Label" />
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="409.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+      <Label fx:id="amountLabel" layoutX="417.0" layoutY="32.0" prefHeight="40.0" prefWidth="81.0" text="0">
+         <font>
+            <Font size="24.0" />
+         </font></Label>
+      <Label fx:id="unitPriceLabel" layoutX="245.0" layoutY="38.0" prefHeight="30.0" prefWidth="45.0" text="kr" textAlignment="RIGHT" />
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="366.0" layoutY="30.0" onMouseClicked="#onMinusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/minus.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="453.0" layoutY="40.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="478.0" layoutY="29.0" onMouseClicked="#onPlusButtonPressed" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/plus.png" />
          </image>
       </ImageView>
-      <Label fx:id="unitSuffixLabel" layoutX="329.0" layoutY="43.0" text="unitSuffix" />
+      <Label fx:id="unitSuffixLabel" layoutX="274.0" layoutY="45.0" text="unitSuffix" />
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="607.0" layoutY="50.0" onMouseClicked="#removeShoppingItem" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Res/Images/paperbin.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="600.0" layoutY="35.0" text="Ta bort" />
    </children>
 </fx:root>
