--- a/src/main/ShoppingCart/ShoppingCart.fxml
+++ b/src/main/ShoppingCart/ShoppingCart.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -33,9 +34,9 @@
                                  <children>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="416.0" prefWidth="781.0">
                                        <children>
-                                          <ScrollPane layoutY="40.0" prefHeight="320.0" prefWidth="783.0">
+                                          <ScrollPane hbarPolicy="NEVER" layoutY="40.0" prefHeight="320.0" prefWidth="781.0">
                                              <content>
-                                                <FlowPane fx:id="shoppingCartFlowPane" prefHeight="319.0" prefWidth="767.0" stylesheets="@../Res/styles.css" />
+                                                <FlowPane fx:id="shoppingCartFlowPane" prefHeight="319.0" prefWidth="767.0" style="-fx-background-color: white;" stylesheets="@../Res/styles.css" />
                                              </content>
                                           </ScrollPane>
                                           <Label layoutX="121.0" layoutY="2.0" text="Produkt">
@@ -75,8 +76,16 @@
                         </Pane>
                         <Pane layoutX="31.0" layoutY="529.0" prefHeight="52.0" prefWidth="763.0" style="-fx-background-color: white;">
                            <children>
-                              <Button fx:id="shoppingCartNextButton" layoutX="697.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#onNextButtonPressed" text="Button" />
-                              <Button fx:id="previousButton" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onMouseClicked="#previousStep" text="Button" />
+                              <ImageView fitHeight="48.0" fitWidth="190.0" layoutX="566.0" layoutY="2.0" onMouseClicked="#onNextButtonPressed" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Res/Images/next.png" />
+                                 </image>
+                              </ImageView>
+                              <ImageView fitHeight="30.0" fitWidth="170.0" layoutX="14.0" layoutY="11.0" onMouseClicked="#previousStep" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Res/Images/previous.png" />
+                                 </image>
+                              </ImageView>
                            </children>
                         </Pane>
                         <Pane layoutX="23.0" layoutY="24.0" prefHeight="43.0" prefWidth="778.0" style="-fx-background-color: white;">
