--- a/src/main/ConfirmationPage/ConfirmationPage.fxml
+++ b/src/main/ConfirmationPage/ConfirmationPage.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -13,7 +14,6 @@
          <children>
             <Pane layoutX="27.0" layoutY="46.0" prefHeight="628.0" prefWidth="909.0" style="-fx-background-color: #B1D5F6;">
                <children>
-                  <Button fx:id="goBackToFrontButton" layoutX="378.0" layoutY="517.0" mnemonicParsing="false" onMouseClicked="#onGoBackToFrontButtonPressed" prefHeight="69.0" prefWidth="203.0" text="TEMP (TILLBAKS TILL START)" />
                   <Label layoutX="325.0" layoutY="53.0" prefHeight="50.0" prefWidth="272.0" style="-fx-background-color: white;" text="    Köp genomfört!">
                      <font>
                         <Font size="34.0" />
@@ -35,8 +35,13 @@
                      </font>
                   </Label>
                   <ImageView fitHeight="87.0" fitWidth="150.0" layoutX="397.0" layoutY="146.0" pickOnBounds="true" preserveRatio="true" />
-                  <Button layoutX="285.0" layoutY="517.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="80.0" text="Button" />
+                  <Button layoutX="285.0" layoutY="517.0" mnemonicParsing="false" onMouseClicked="#shutDownApplication" prefHeight="69.0" prefWidth="80.0" text="Stäng iMat" />
                   <Button layoutX="592.0" layoutY="517.0" mnemonicParsing="false" prefHeight="69.0" prefWidth="140.0" />
+                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" layoutX="394.0" layoutY="509.0" onMouseClicked="#onGoBackToFrontButtonPressed" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" x="26.0">
+                     <image>
+                        <Image url="@../Res/Images/escape_hatch.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
          </children>
