--- a/src/main/ShoppingCart/ShoppingCart.fxml
+++ b/src/main/ShoppingCart/ShoppingCart.fxml
@@ -20,6 +20,11 @@
                <children>
                   <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="123.0" text="Kundservice &amp; hjälp" />
                   <ImageView fitHeight="81.0" fitWidth="423.0" layoutX="247.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" onMouseClicked="#closeWizard" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" x="26.0">
+                     <image>
+                        <Image url="@../Res/Images/escape_hatch.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
          </top>
@@ -102,6 +107,5 @@
             </Pane>
          </center>
       </BorderPane>
-      <Button fx:id="homeButton" layoutX="26.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#closeWizard" prefHeight="64.0" prefWidth="97.0" text="Tillbaka till startsidan" wrapText="true" />
    </children>
 </fx:root>
