--- a/src/main/Payment/Payment.fxml
+++ b/src/main/Payment/Payment.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -25,6 +26,14 @@
                      <image>
                         <Image url="@../Res/Images/escape_hatch.png" />
                      </image>
+                  </ImageView>
+                  <ImageView fitHeight="182.0" fitWidth="548.0" layoutX="202.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Res/Images/progress_indicator_four.png" />
+                     </image>
+                     <rotationAxis>
+                        <Point3D />
+                     </rotationAxis>
                   </ImageView>
                </children>
             </Pane>
